...
          children: [
            Container(),
            SizedBox(height: 20),
            Column(
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                Text('Whats your email?', style: TextStyle(fontSize: 16)),
                Container(
                  width: 300,
                  height: 40,
                  padding: EdgeInsets.all(10),
                  decoration: BoxDecoration(
                    border: Border.all(width: 1, color: Colors.white),
...
              onTap: () {
                Navigator.push(
                  context,
                  MaterialPageRoute(builder: (context) => Signup2()),
                );
              },
              key: Key('nextButton'),
              child: Container(
                height: 30,
                width: 70,
                decoration: BoxDecoration(
                  color: Color.fromARGB(255, 83, 83, 83),
                  borderRadius: BorderRadius.all(Radius.circular(50)),
...
